// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb Snapshots empty array 1`] = `
<ol
  className="sc-bdfBwQ jQwcVQ"
/>
`;

exports[`Breadcrumb Snapshots no props 1`] = `
<ol
  className="sc-bdfBwQ jQwcVQ"
>
  <li
    className="sc-gsTCUz gmwjOP"
  >
    <div
      className="sc-hKgILt bNTGqN"
    >
      <div />
    </div>
  </li>
</ol>
`;

exports[`Breadcrumb Snapshots with child 1`] = `
<ol
  className="sc-bdfBwQ jQwcVQ"
/>
`;

exports[`Breadcrumb Snapshots with path 1`] = `
<ol
  className="sc-bdfBwQ jQwcVQ"
>
  <li
    className="sc-gsTCUz gmwjOP"
  >
    <a
      className="sc-dlfnbm iILxcZ"
      href="/"
    >
      <div>
        First page
      </div>
    </a>
  </li>
  <li
    className="sc-gsTCUz gmwjOP"
  >
    <a
      className="sc-dlfnbm iILxcZ"
      href="/level-2"
    >
      <div>
        Second page
      </div>
    </a>
  </li>
  <li
    className="sc-gsTCUz gmwjOP"
  >
    <a
      className="sc-dlfnbm iILxcZ"
      href="/level-3"
    >
      <div>
        Third page
      </div>
    </a>
  </li>
  <li
    className="sc-gsTCUz gmwjOP"
  >
    <div
      className="sc-hKgILt bNTGqN"
    >
      <div>
        Fourth page
      </div>
    </div>
  </li>
</ol>
`;
